resolve the dropdown hidden feature #322

--- a/404.html
+++ b/404.html
@@ -42,13 +42,14 @@
                         </li>
                     </ul>
                 </li>
-                <li class="community">
+                <li class="community ">
                     <a href="maintenance.html">Join Our Community</a>
-                    <ul class="dropdown">
-                        <li><a href="maintenance.html">WhatsApp</a></li>
-                        <li><a href="maintenance.html">Discord</a></li>
+                    <ul class="dropdown absolute hidden bg-white shadow-lg">
+                        <li class="p-2"><a href="maintenance.html">WhatsApp</a></li>
+                        <li class="p-2"><a href="maintenance.html">Discord</a></li>
                     </ul>
                 </li>
+                
                 <li>
                     <a href="maintenance.html">Meet Our Team</a>
                 </li>
