Free Resources Added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li>
                 <a href="learning.html">Learning</a>
                 <ul class="dropdown">
-                    <li><a href="#">Free Learning Resources</a></li>
+                    <li><a href="./Resources.html">Free Learning Resources</a></li>
                     <li><a href="#">Mentorship Programs</a></li>
                     <li><a href="#">Peer-to-Peer Sessions</a></li>
                 </ul>
@@ -141,9 +141,6 @@
         </div>
     </section>
 
-
-    <br>
-
     <footer class="footer-section">
         <div class="container">
           <!-- Logo and About Section -->
@@ -159,7 +156,9 @@
               <a href="https://wa.me/your-whatsapp-number" target="_blank"><img src="./images/whatsapp-icon.png" alt="WhatsApp"></a>
               <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png" alt="Discord"></a>
               <a href="https://www.linkedin.com/company/code-social/" target="_blank"><img src="./images/linkedin-icon.png" alt="LinkedIn"></a>
-  
+            </div>
+          </div>
+      
           <!-- Links Section -->
           <div class="footer-links">
             <div class="footer-column">
@@ -171,7 +170,6 @@
                 <li><a href="#">Careers</a></li>
               </ul>
             </div>
-
             <div class="footer-column">
               <p class="footer-title">Help</p>
               <ul class="footer-list">
@@ -187,9 +185,6 @@
         <hr class="footer-divider">
         <p class="footer-bottom-text">© Copyright 2024, All Rights Reserved by Code Social</p>
       </footer>
-   
-
-
 
 
         <script>
