--- a/booking.html
+++ b/booking.html
@@ -409,6 +409,7 @@
                 <li class="ml-20">
                     <a href="maintenance.html">Live Events</a>
                     <ul class="dropdown  " style="display: none;">
+                        <li><a href="booking.html">Book Tickets</a></li>
                         <li><a href="maintenance.html">Why don't you react?</a></li>
     
                     </ul>
