--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ animateCircles();
             <li class="ml-20">
                 <a href="maintenance.html">Live Events</a>
                 <ul class="dropdown  ">
+                    <li><a href="register.html">Register Now</a></li>
                     <li><a href="maintenance.html">Why don't you react?</a></li>
 
                 </ul>
