--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ animateCircles();
           <!-- Logo and About Section -->
           <div class="footer-logo-about">
             <a href="index.html" class="footer-logo-link">
-              <img src="/images/logo.png" alt="Code Social Logo" class="footer-logo">
+              <img src="https://code-social.github.io/official-website/images/logo.png" alt="Code Social Logo" class="footer-logo">
               <span class="website-name">Code Social</span>
             </a>
             <p class="footer-about-text">
