--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 
     <script>
         const events = [
-            { date: '2024-10-06', title: 'React Workshop', color: '#4CAF50' },
-            { date: '2024-10-14', title: 'Node.js Webinar', color: '#FFC107' },
-            { date: '2024-10-21', title: 'CSS Masterclass', color: '#2196F3' },
+            { date: '2024-10-06', eventdetails: [{ title: 'React Workshop', color: '#4CAF50' }, { title: 'JavaScript Talk', color: '#FF5733' }] },
+            { date: '2024-10-14', eventdetails: [{ title: 'Node.js Webinar', color: '#FFC107' }] },
+            { date: '2024-10-21', eventdetails: [{ title: 'CSS Masterclass', color: '#2196F3' }, { title: 'Advanced CSS', color: '#FF5722' }] },
         ];
 
         let currentMonth = new Date().getMonth();
@@ -337,12 +337,19 @@
 
                 if (event.length) {
                     event.forEach(ev => {
-                        const eventElement = document.createElement('div');
-                        eventElement.className = 'event';
-                        eventElement.style.backgroundColor = ev.color || '#4CAF50';
-                        eventElement.innerText = ev.title;
-                        eventElement.addEventListener('click', () => alert(ev.title)); // Simple alert for now, can be modal or tooltip.
-                        dayElement.appendChild(eventElement);
+                        if (ev.eventdetails && ev.eventdetails.length > 0) {
+                                ev.eventdetails.forEach(detail => {
+                                    const eventElement = document.createElement('div');
+                                    eventElement.className = 'event';
+                                    eventElement.style.backgroundColor = detail.color || '#4CAF50';
+                                    eventElement.innerText = detail.title;
+                                    eventElement.addEventListener('click', (e) => {
+                                        e.stopPropagation(); 
+                                        alert(detail.title);
+                                    });
+                                    dayElement.appendChild(eventElement);
+                                });
+                            }
                     });
                 }
 
@@ -374,7 +381,12 @@
             const color = document.getElementById('event-color').value;
 
             if (date && title) {
-                events.push({ date, title, color });
+                const existingEventIndex = events.findIndex(e => e.date === date);
+                    if (existingEventIndex !== -1) {
+                        events[existingEventIndex].eventdetails.push({ title, color });
+                    } else {
+                        events.push({ date, eventdetails: [{ title, color }] });
+                    }
                 generateCalendar();
                 document.getElementById('event-title').value = '';
             }
