Added linktree page for social media links

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ animateCircles();
 
                 </ul>
             </li>
+        
          <!-- blog section -->
             <ul class="navbar-links flex  ">
             <li class="ml-20">
@@ -132,7 +133,7 @@ animateCircles();
                 </ul>
             </li>
             <li class="community">
-                <a href="maintenance.html">Join Our Community</a>
+                <a href="join_community.html">Join Our Community</a>
                 <ul class="dropdown">
                     <li><a href="maintenance.html">WhatsApp</a></li>
                     <li><a href="maintenance.html">Discord</a></li>
