--- a/signup.html
+++ b/signup.html
@@ -78,19 +78,20 @@
             margin-bottom: 10px;
         }
 
-        .login-link {
-            text-align: center;
-            margin-top: 20px;
+        .password-strength {
+            margin-top: 10px;
         }
 
-        .login-link a {
-            color: #4CAF50;
-            text-decoration: none;
+        .password-strength .strength-bar {
+            height: 5px;
+            background-color: #ddd;
+            border-radius: 5px;
+            transition: width 0.3s ease;
+        }
+
+        .password-strength .strength-message {
             font-size: 14px;
-        }
-
-        .login-link a:hover {
-            text-decoration: underline;
+            margin-top: 5px;
         }
 
         /* Responsive */
@@ -112,10 +113,95 @@
                 font-size: 14px;
             }
         }
+
+        .circle {
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    position: fixed;
+    background-color: black;  /* Default color of circles */
+    pointer-events: none;     /* Prevent interaction with circles */
+    z-index: 9999;
+    transition: transform 0.1s ease-out;
+    }
     </style>
 </head>
 
 <body>
+
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <script>
+        // Store the mouse coordinates
+const coords = { x: 0, y: 0 };
+
+// Select all circles (you can add more circles to HTML as needed)
+const circles = document.querySelectorAll(".circle");
+
+// Customize the colors for the circles (optional)
+const colors = ["#ffb56b", "#fdaf69", "#f89d63", "#f59761", "#ef865e", "#ec805d", "#e36e5c", "#df685c", "#d5585c", "#d1525c", "#c5415d", "#c03b5d", "#b22c5e", "#ac265e", "#9c155f", "#950f5f", "#830060", "#7c0060", "#680060", "#60005f", "#48005f", "#3d005e"];
+
+// Initialize circle positions
+circles.forEach((circle, index) => {
+    circle.x = 0;
+    circle.y = 0;
+    circle.style.backgroundColor = colors[index % colors.length];  // Assign colors
+});
+
+// Update mouse coordinates on move
+window.addEventListener("mousemove", (e) => {
+    coords.x = e.clientX;
+    coords.y = e.clientY;
+});
+
+// Animation loop for circles
+function animateCircles() {
+    let x = coords.x;
+    let y = coords.y;
+
+    circles.forEach((circle, index) => {
+        circle.style.left = `${x - 12}px`;   // Offset for center alignment
+        circle.style.top = `${y - 12}px`;
+
+        circle.style.transform = `scale(${(circles.length - index) / circles.length})`;  // Shrink effect
+
+        circle.x = x;
+        circle.y = y;
+
+        const nextCircle = circles[index + 1] || circles[0];
+        x += (nextCircle.x - x) * 0.3;
+        y += (nextCircle.y - y) * 0.3;
+    });
+
+    requestAnimationFrame(animateCircles);
+}
+
+// Start animation
+animateCircles();
+
+    </script>
     <div class="signup-container">
         <h2>Signup</h2>
         <form id="signupForm">
@@ -127,6 +213,11 @@
 
             <input type="password" id="password" name="password" placeholder="Password" required>
             <div id="passwordError" class="error-message"></div>
+
+            <div class="password-strength">
+                <div id="strengthBar" class="strength-bar"></div>
+                <div id="strengthMessage" class="strength-message"></div>
+            </div>
 
             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
             <div id="confirmPasswordError" class="error-message"></div>
@@ -152,6 +243,49 @@
         const passwordError = document.getElementById('passwordError');
         const confirmPasswordError = document.getElementById('confirmPasswordError');
         const successMessage = document.getElementById('successMessage');
+        const strengthBar = document.getElementById('strengthBar');
+        const strengthMessage = document.getElementById('strengthMessage');
+
+        const updateStrengthMeter = (password) => {
+            let strength = 0;
+            if (password.length >= 8) strength++;
+            if (/[A-Z]/.test(password)) strength++;
+            if (/[a-z]/.test(password)) strength++;
+            if (/\d/.test(password)) strength++;
+            if (/[!@#$%^&*(),.?":{}|<>]/.test(password)) strength++;
+
+            // Update the strength bar
+            strengthBar.style.width = (strength * 20) + '%';
+
+            if (strength === 0) {
+                strengthBar.style.backgroundColor = '#ddd';
+                strengthMessage.textContent = '';
+            } else if (strength <= 2) {
+                strengthBar.style.backgroundColor = 'red';
+                strengthMessage.textContent = 'Weak password. Try adding numbers, symbols, and uppercase letters.';
+            } else if (strength <= 4) {
+                strengthBar.style.backgroundColor = 'orange';
+                strengthMessage.textContent = 'Moderate password. Add more complexity for a stronger password.';
+            } else {
+                strengthBar.style.backgroundColor = 'green';
+                strengthMessage.textContent = 'Strong password.';
+            }
+        };
+
+        passwordInput.addEventListener('input', (e) => {
+            const password = e.target.value;
+            updateStrengthMeter(password);
+        });
+
+        // Real-time email validation when user finishes typing
+        emailInput.addEventListener('blur', () => {
+            const emailPattern = /^[^\s@]+@[^\s@]+\.[a-zA-Z]{2,}$/;
+            if (!emailPattern.test(emailInput.value)) {
+                emailError.textContent = 'Please enter a valid email address.';
+            } else {
+                emailError.textContent = '';
+            }
+        });
 
         form.addEventListener('submit', (e) => {
             e.preventDefault();
@@ -171,15 +305,15 @@
             }
 
             // Email validation
-            const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            const emailPattern = /^[^\s@]+@[^\s@]+\.[a-zA-Z]{2,}$/;
             if (!emailPattern.test(emailInput.value)) {
                 emailError.textContent = 'Please enter a valid email address.';
                 valid = false;
             }
 
             // Password validation
-            if (passwordInput.value.length < 6) {
-                passwordError.textContent = 'Password must be at least 6 characters long.';
+            if (passwordInput.value.length < 8) {
+                passwordError.textContent = 'Password must be at least 8 characters long.';
                 valid = false;
             }
 
@@ -194,23 +328,11 @@
                 successMessage.textContent = 'Signup successful!';
                 form.reset();
                 setTimeout(() => {
-                    window.location.href = 'index.html'; // Redirect to index.html after 2 seconds
-                }, 1000); // Adjust the timing as needed
+                    window.location.href = 'index.html';
+                }, 1000);
             }
         });
     </script>
-    <script>
-        window.embeddedChatbotConfig = {
-        chatbotId: "j2Uy2CrJfZueGX7wNtJT_",
-        domain: "www.chatbase.co"
-        }
-        </script>
-        <script
-        src="https://www.chatbase.co/embed.min.js"
-        chatbotId="j2Uy2CrJfZueGX7wNtJT_"
-        domain="www.chatbase.co"
-        defer>
-        </script>
 </body>
 
 </html>
