--- a/maintenance.html
+++ b/maintenance.html
@@ -102,6 +102,59 @@
                 </p>
             </div>
         </section>
+
+        <!-- Adding footer -->
+        <footer class="footer-section">
+            <div class="container">
+                <!-- Logo and About Section -->
+                <div class="footer-logo-about">
+                    <a href="index.html" class="footer-logo-link">
+                        <img src="images/logo.png" alt="Code Social Logo" class="footer-logo">
+                        <span class="website-name">Code Social</span>
+                    </a>
+                    <p class="footer-about-text">
+                        Code Social Community is a vibrant and inclusive space for tech enthusiasts <br> to learn, grow, and
+                        connect. Founded in 2023, our mission is to empower individuals <br> with resources, mentorship, and
+                        opportunities to cultivate their skills, explore their interests, and <br>collaborate with
+                        like-minded peers.
+                    </p>
+                    <div class="social-icons">
+                        <a href="https://wa.me/your-whatsapp-number" target="_blank"><img src="./images/whatsapp-icon.png"
+                                alt="WhatsApp"></a>
+                        <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png"
+                                alt="Discord"></a>
+                        <a href="https://www.linkedin.com/company/code-social/" target="_blank"><img
+                                src="./images/linkedin-icon.png" alt="LinkedIn"></a>
+                    </div>
+                </div>
+    
+                <!-- Links Section -->
+                <div class="footer-links">
+                    <div class="footer-column">
+                        <p class="footer-title">Quick Links</p>
+                        <ul class="footer-list">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Community Guidelines</a></li>
+                            <li><a href="#">Careers</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <p class="footer-title">Help</p>
+                        <ul class="footer-list">
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Volunteer Opportunities</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Footer Bottom -->
+            <hr class="footer-divider">
+            <p class="footer-bottom-text">© Copyright 2024, All Rights Reserved by Code Social</p>
+        </footer>
+
         <script>
             window.embeddedChatbotConfig = {
             chatbotId: "j2Uy2CrJfZueGX7wNtJT_",
