added nav and footer pages in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css" type="text/css" />
+    <script src="common.js" defer></script>
     <script src="script.js" defer></script>
     <script src="common.js" defer></script>
     <script src="darkmode.js" defer></script>
