fix dark mode toggle errors and improve element loading

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css" type="text/css" />
-    <script src="common.js" defer></script>
     <script src="script.js" defer></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="common.js" defer></script>
+    <script src="darkmode.js" defer></script>
     <link rel="icon" type="image/png" href="images/logo copy.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
