--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <!-- Navbar Links -->
         <ul class="navbar-links flex  ">
             <li class="ml-20">
-                <a href="maintenance.html">Live Events</a>
+                <a href="events.html">Live Events</a>
                 <ul class="dropdown  ">
                     <li><a href="register.html">Register Now</a></li>
                     <li><a href="maintenance.html">Why don't you react?</a></li>
@@ -496,7 +496,7 @@
                     <p class="footer-title">Quick Links</p>
                     <ul class="footer-list">
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">Events</a></li>
+                        <li><a href="events.html">Events</a></li>
                         <li><a href="#">Community Guidelines</a></li>
                         <li><a href="#">Careers</a></li>
                     </ul>
