--- a/learning.html
+++ b/learning.html
@@ -211,7 +211,7 @@ animateCircles();
       <!-- Navbar Links -->
       <ul class="navbar-links flex">
         <li class="ml-20">
-          <a href="maintenance.html">Live Events</a>
+          <a href="events.html">Live Events</a>
           <ul class="dropdown">
             <li><a href="maintenance.html">Why don't you react?</a></li>
           </ul>
@@ -417,7 +417,7 @@ animateCircles();
             <h5 class="footer-title">Quick Links</h5>
             <ul class="footer-list">
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Events</a></li>
+              <li><a href="events.html">Events</a></li>
               <li><a href="#">Community Guidelines</a></li>
               <li><a href="#">Careers</a></li>
             </ul>
