--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <ul class="dropdown">
                     <li><a href="mentorship.html">Meet Our Team</a></li>
                     <li><a href="#">Join Our Team</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="contactUs.html">Contact Us</a></li>
                     <li><a href="#">Follow Us</a></li>
                 </ul>
             </li>
