Join Our Team Page Added

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
                 <ul class="dropdown">
                     <li><a href="mentorship.html">Meet Our Team</a></li>
-                    <li><a href="#">Join Our Team</a></li>
+                    <li><a href="./JoinTeam.html">Join Our Team</a></li>
                     <li><a href="contactUs.html">Contact Us</a></li>
                     <li><a href="#">Follow Us</a></li>
                 </ul>
