Replaced Every whatsapp log and links with Instagram

--- a/maintenance.html
+++ b/maintenance.html
@@ -45,7 +45,7 @@
                 <li class="community">
                     <a href="maintenance.html">Join Our Community</a>
                     <ul class="dropdown">
-                        <li><a href="maintenance.html">WhatsApp</a></li>
+                        <li><a href="maintenance.html">Instagram</a></li>
                         <li><a href="maintenance.html">Discord</a></li>
                     </ul>
                 </li>
@@ -119,8 +119,8 @@
                         like-minded peers.
                     </p>
                     <div class="social-icons">
-                        <a href="https://wa.me/your-whatsapp-number" target="_blank"><img src="./images/whatsapp-icon.png"
-                                alt="WhatsApp"></a>
+                        <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="./images/instagram.png"
+                                alt="Instagram"></a>
                         <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png"
                                 alt="Discord"></a>
                         <a href="https://www.linkedin.com/company/code-social/" target="_blank"><img
