--- a/register.html
+++ b/register.html
@@ -188,7 +188,7 @@
           <li class="community">
             <a href="maintenance.html">Join Our Community</a>
             <ul class="dropdown" style="display: none">
-              <li><a href="maintenance.html">WhatsApp</a></li>
+              <li><a href="maintenance.html">Instagram</a></li>
               <li><a href="maintenance.html">Discord</a></li>
             </ul>
           </li>
@@ -318,8 +318,8 @@
             like-minded peers.
           </p>
           <div class="social-icons">
-            <a href="https://wa.me/your-whatsapp-number" target="_blank"
-              ><img src="./images/whatsapp-icon.png" alt="WhatsApp"
+            <a href="https://www.instagram.com/codesocial.tech/" target="_blank"
+              ><img src="./images/instagram.png" alt="Instagram"
             /></a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank"
               ><img src="./images/discord-icon.png" alt="Discord"
