--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
                 <li class="community ">
                     <a href="maintenance.html">Join Our Community</a>
                     <ul class="dropdown absolute hidden bg-white shadow-lg">
-                        <li class="p-2"><a href="maintenance.html">WhatsApp</a></li>
+                        <li class="p-2"><a href="maintenance.html">Instagram</a></li>
                         <li class="p-2"><a href="maintenance.html">Discord</a></li>
                     </ul>
                 </li>
