--- a/learning.html
+++ b/learning.html
@@ -220,7 +220,7 @@ animateCircles();
           <a href="maintenance.html">Join Our Community</a>
 
           <ul class="dropdown">
-            <li><a href="maintenance.html">WhatsApp</a></li>
+            <li><a href="maintenance.html">Instagram</a></li>
             <li><a href="maintenance.html">Discord</a></li>
           </ul>
         </li>
@@ -397,8 +397,8 @@ animateCircles();
             like-minded peers.
           </p>
           <div class="social-icons">
-            <a href="https://wa.me/your-whatsapp-number" target="_blank"
-              ><img src="./images/whatsapp-icon.png" alt="WhatsApp"
+            <a href="https://www.instagram.com/codesocial.tech/" target="_blank"
+              ><img src="./images/instagram.png" alt="Instagram"
             /></a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank"
               ><img src="./images/discord-icon.png" alt="Discord"
