--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
                 <ul class="dropdown">
                     <li><a href="mentorship.html">Meet Our Team</a></li>
-                    <li><a href="./JoinTeam.html">Join Our Team</a></li>
+                    <li><a href="#">Join Our Team</a></li>
                     <li><a href="contactUs.html">Contact Us</a></li>
                     <li><a href="#">Follow Us</a></li>
                 </ul>
@@ -428,7 +428,7 @@
         <!-- Social Media Icons -->
         <div class="social-icons">
             <a href="https://www.instagram.com/codesocial.tech/" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="images/instagram-icon.png" alt="Instagram">
             </a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank">
                 <img src="images/discord-icon.png" alt="Discord">
@@ -483,7 +483,7 @@
                     like-minded peers.
                 </p>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="images/instagram.png"
+                    <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="images/instagram-icon.png"
                             alt="Instagram"></a>
                     <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png"
                             alt="Discord"></a>
